# qdynamics

./: .gitignore  .ibm_runtime.env  AGENTS.md  CHANGELOG.md  CODEX_FINISH_HANDOFF.md  HH_3STEP_SPECTRA_EXCITEMENT_PLAN.md  HH_KINGSTON_STATE_PREP_IMPROVEMENT_SPEC.md  HH_MEASUREMENT_BRIEF.md  HH_MEASUREMENT_IMPL_GUIDE.md  HH_QPU_RAW_BRIEF.md  HH_QPU_TIME_DYNAMICS_SECANT_PLAN.md  L2_hh_smart_replay.csv  L2_hh_smart_replay.md  L3_hh_smart_adapt.json  L3_hh_smart_replay.csv  L3_hh_smart_replay.json  L3_hh_smart_replay.md  L3_hh_smart_replay_bundle.json  L3_hh_smart_results.json  L3_hh_smart_warm.json  Makefile  PLAN_AGENTS_RUN_GUIDE.md  QPU_RAW_VQE_IMPLEMENTATION_SPEC.md  README.md  Repo.md  Untitled.canvas  cleanup_manifest.md  config.mk  presentation_pi_figures_todo.md  presentation_pi_handoff.md  pyproject.toml  pytest.ini  run_guide.md  test_integration.py  testing3d.py
.obsidian/: graph.json  workspace.json
Fermi-Hamil-JW-VQE-TROTTER-PIPELINE/: .gitignore  AGENTS.md  README.md
Future/: Notes.md
MATH/: 17A_symbol_guide.aux  17A_symbol_guide.tex  IDEAS.md  IMPLEMENT_NEXT.md  IMPLEMENT_SOON.md  Math.aux  Math.md  Math.pre_codex_section17_backup_2026-04-05.md  Math.tex  Math.toc  adaptive_selection_and_mclachlan_time_dynamics.fdb_latexmk  adaptive_selection_and_mclachlan_time_dynamics.fls  adaptive_selection_and_mclachlan_time_dynamics.tex  adaptive_selection_staged_continuation.aux  adaptive_selection_staged_continuation.fdb_latexmk  adaptive_selection_staged_continuation.fls  adaptive_selection_staged_continuation.tex  archaic_repo_math.md  backupmath.md  (+5 more)
(+2205 files in other folders)
