[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["src", "src/quantum", "src/unit_tests"]
exclude = []

[project]
name = "qdynamics"
version = "1.0.0"
authors = [
    { name = "Jacopo Simoni", email="jsimoni@wisc.edu" },
]
description = "The qdynamics package is designed to perform quantum dynamics using quantum inspired algorithms."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["dependencies/requirements.txt"] }
